--- a/home/templates/pages/base.html
+++ b/home/templates/pages/base.html
@@ -10,6 +10,13 @@
       href="{% static 'css/bootstrap.min.css' %}"
       type="text/css"
     />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>{% block title%}{% endblock %}</title>
   </head>
   <body>
